#121 - Added delete operator